feat: media crud & media uploader on movie entity
