# app/Http/Resources/MediaResource.php
@@ -3,11 +3,9 @@
 namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
-use App\Models\CategoryMovie;
-use App\Http\Resources\CategoryResource;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class MovieResource extends JsonResource
+class MediaResource extends JsonResource
 {
 
     /**
@@ -19,12 +17,9 @@ class MovieResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'title' => $this->name,
-            'description' => $this->description,
-            'release_date' => $this->release_date,
-            'rating' => $this->rating,
-            'media' => $this->media_id ?? null,
-            'categories' => CategoryResource::collection($this->categories),
+            'media_path' => $this->media_path,
+            'media_url' => $this->media_url,
+            'media_type' => $this->media_type,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at
         ];
